Multi-platform path fixes.

--- a/Nightfire_Source_Update_Builder/Nightfire_Source_Update_Builder.csproj
+++ b/Nightfire_Source_Update_Builder/Nightfire_Source_Update_Builder.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChangeSets.cs" />
+    <Compile Include="Utils.cs" />
     <Compile Include="DirectorySearch.cs" />
     <Compile Include="Hashing.cs" />
     <Compile Include="Program.cs" />
