--- a/Nightfire_Source_Update_Builder/packages.config
+++ b/Nightfire_Source_Update_Builder/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ILRepack" version="2.0.13" targetFramework="net452" />
+  <package id="Mono.Options" version="5.3.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
 </packages>
